--- a/doc/environment.yml
+++ b/doc/environment.yml
@@ -10,12 +10,12 @@ dependencies:
   - openalea.misc
   - openalea.plantgl
   - boost=1.66
-  - pip :
-    - nbsphinx
   - sphinx>=1.6
   - k3d
   - ipython
   - openalea.mtg
   - ipykernel
   - pandoc
+  - nbsphinx
   - nbconvert!=5.4
+  - pip
