--- a/.github/workflows/conda-package-build.yml
+++ b/.github/workflows/conda-package-build.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build and Publish
-      uses: openalea/build-publish-anaconda@v0.1.0
+      uses: openalea/action-build-publish-anaconda@0.1.0
       with:
         conda: conda
         python: ${{ matrix.python-minor-version }}
