--- a/.github/workflows/conda-package-build.yml
+++ b/.github/workflows/conda-package-build.yml
@@ -24,5 +24,5 @@ jobs:
       with:
         conda: conda
         python: ${{ matrix.python-minor-version }}
-        channels: openalea3, openalea, conda-forge
+        channels: openalea3, conda-forge
         token: ${{ secrets.ANACONDA_TOKEN }}
