--- a/.github/workflows/conda-package-build.yml
+++ b/.github/workflows/conda-package-build.yml
@@ -2,7 +2,7 @@ name: Building and publish package using anaconda
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, dev_GH-actions ]
   pull_request:
     branches: [ master ]
 
