--- a/.github/workflows/conda-package-build.yml
+++ b/.github/workflows/conda-package-build.yml
@@ -16,12 +16,10 @@ jobs:
       matrix:
         os: [ ubuntu-latest , macos-latest , windows-latest]
         python-minor-version: [7, 8, 9]
-        isMaster:
-          - ${{ contains(github.ref, 'master') }}
         exclude:
-          - isMaster: false
-            os: [macos-latest , windows-latest]
-            python-minor-version: [7, 8]
+          - os: [macos-latest , windows-latest]
+            python-minor-version: [7, 8]     
+            if: ${{ contains(github.ref, 'master') }}        
 
     steps:
     - uses: actions/checkout@v3
