--- a/.github/workflows/conda-package-build.yml
+++ b/.github/workflows/conda-package-build.yml
@@ -17,7 +17,7 @@ jobs:
         os: [ ubuntu-latest , macos-latest , windows-latest]
         python-minor-version: [7, 8, 9]
         isMaster:
-          - ${{ github.ref == 'refs/heads/master') }}
+          - ${{ github.ref == 'refs/heads/master' }}
         exclude:
           - isMaster: false
             os: [macos-latest , windows-latest]
