Correct matrix correction

--- a/.github/workflows/conda-package-build.yml
+++ b/.github/workflows/conda-package-build.yml
@@ -20,17 +20,29 @@ jobs:
           - ${{ github.ref == 'refs/heads/master' }}
         exclude:
           - isMaster: false
+            os: ubuntu-latest
+            python-minor-version: 7
+          - isMaster: false
+            os: ubuntu-latest
+            python-minor-version: 8
+          - isMaster: false
             os: macos-latest
             python-minor-version: 7
           - isMaster: false
             os: macos-latest
             python-minor-version: 8
           - isMaster: false
+            os: macos-latest
+            python-minor-version: 9
+          - isMaster: false
             os: windows-latest
             python-minor-version: 7
           - isMaster: false
             os: windows-latest
             python-minor-version: 8
+          - isMaster: false
+            os: windows-latest
+            python-minor-version: 9            
 
     steps:
     - uses: actions/checkout@v3
