--- a/.github/workflows/conda-package-build.yml
+++ b/.github/workflows/conda-package-build.yml
@@ -15,34 +15,7 @@ jobs:
       max-parallel: 3
       matrix:
         os: [ ubuntu-latest , macos-latest , windows-latest]
-        python-minor-version: [7, 8, 9]
-        isMaster:
-          - ${{ github.ref == 'refs/heads/master' }}
-        exclude:
-          - isMaster: false
-            os: ubuntu-latest
-            python-minor-version: 7
-          - isMaster: false
-            os: ubuntu-latest
-            python-minor-version: 8
-          - isMaster: false
-            os: macos-latest
-            python-minor-version: 7
-          - isMaster: false
-            os: macos-latest
-            python-minor-version: 8
-          - isMaster: false
-            os: macos-latest
-            python-minor-version: 9
-          - isMaster: false
-            os: windows-latest
-            python-minor-version: 7
-          - isMaster: false
-            os: windows-latest
-            python-minor-version: 8
-          - isMaster: false
-            os: windows-latest
-            python-minor-version: 9            
+        python-minor-version: [7 ]
 
     steps:
     - uses: actions/checkout@v3
@@ -54,7 +27,7 @@ jobs:
         if_true: 'true'
         if_false: 'false'
     - name: Build and Publish
-      uses: ./.github/actions/build-publish-anaconda
+      uses: openalea/build-publish-anaconda@v0.1.2
       with:
         conda: conda
         mamba: true
