--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -8,18 +8,18 @@ source:
   path: ..
 
 build:
+  noarch: python
   preserve_egg_dir: True
-  number: 0
-  script: python setup.py install
+  number: 1
+  script: python setup.py install --single-version-externally-managed --record=record.txt
 
 requirements:
   build:
-      - python {{PY_VER}}
+      - python
       - setuptools
   run:
-      - python {{PY_VER}}
+      - python  >=3.6
       - ipython
-      - openalea.lpy
       - openalea.mtg
       - k3d
       - pyvis
