Add manual trigger of GH-Actions

--- a/.github/workflows/conda-package-build.yml
+++ b/.github/workflows/conda-package-build.yml
@@ -5,6 +5,7 @@ on:
     branches: [ master, dev_GH-actions ]
   pull_request:
     branches: [ master ]
+  workflow_dispatch: # allows you to trigger manually
 
 jobs:
   build-and-publish:
