--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -10,12 +10,12 @@ source:
 build:
   noarch: python
   preserve_egg_dir: True
-  number: 1
-  script: python setup.py install --single-version-externally-managed --record=record.txt
+  number: 2
+  script: {{PYTHON}} setup.py install #--single-version-externally-managed --record=record.txt
 
 requirements:
   build:
-      - python
+      - python {{PY_VER}}
       - setuptools
   run:
       - python  >=3.6
