--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -1,8 +1,22 @@
-{% set data = load_setup_py_data() %}
+{% set pyproject = load_file_data('pyproject.toml') %}
+{% set description = pyproject.get('project').get('description') %}
+{% set home = pyproject.get('project', {}).get('urls').get('Homepage') %}
+
+{% set major = load_file_regex(
+  load_file="src/openalea/phenomenal/version.py",
+  regex_pattern='MAJOR = (.+)') %}
+{% set minor = load_file_regex(
+  load_file="src/openalea/phenomenal/version.py",
+  regex_pattern='MINOR = (.+)') %}
+{% set post = load_file_regex(
+  load_file="src/openalea/phenomenal/version.py",
+  regex_pattern='POST = (.+)') %}
+
+{% set version = major[1]+'.'+minor[1]+'.'+post[1] %}
 
 package:
   name: oawidgets
-  version: {{ data.get('version') }}
+  version: {{ version }}
 
 source:
   path: ..
@@ -11,7 +25,7 @@ build:
   noarch: python
   preserve_egg_dir: True
   number: 2
-  script: {{PYTHON}} setup.py install #--single-version-externally-managed --record=record.txt
+  script: {{PYTHON}} -m pip install .
 
 requirements:
   build:
@@ -26,7 +40,6 @@ requirements:
       - matplotlib
 
 about:
-  home: http://openalea.rtfd.io/
+  home: {{ version }}
   license: CeCILL_C
-  summary: oawidgets provides Jupyter widgets for MTG and 3D visualization as well as lpy
-
+  summary: {{ home }}
