--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,13 @@ authors = [
   { name = "Christophe Pradal"},
 ]
 description = "OpenAlea Widgets for Jupyter"
-license = {file = "LICENSE"}
+license = "CeCILL-C"
+license-files = ["LICENSE"]
 keywords = ["openalea", "jupyter", "widgets", "MTG", "lpy", "plantgl", "3D"]
 requires-python = ">=3.8"
 classifiers = [
   "Intended Audience :: Science/Research",
   "Intended Audience :: Developers",
-  "License :: OSI Approved :: CeCILL-C License",
   "Operating System :: OS Independent",
   "Programming Language :: Python",
   "Programming Language :: Python :: 3",
@@ -53,16 +53,13 @@ Homepage = "https://openalea.readthedocs.io/"
 Discussions = "https://github.com/openalea-incubator/oawidgets/discussions"
 Changelog = "https://github.com/openalea-incubator/oawidgets/releases"
 
-[project.entry-points."wralea"]
-"openalea.phenomenal" = "openalea.phenomenal_wralea"
-
 [tool.setuptools.dynamic]
 version = {attr = "oawidgets.__version__"}
 readme = {file = ["README.md"]}
 
 [tool.setuptools.packages.find]
 where = ["src"]
-include = ["openalea.*"]
+include = ["*"]
 
 [tool.setuptools.package-data]
 "*" = ["*.so", "*.dylib", "*.dll", "*.pyx","*.cpp","*.c","*.h"]
