--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -3,13 +3,13 @@
 {% set home = pyproject.get('project', {}).get('urls').get('Homepage') %}
 
 {% set major = load_file_regex(
-  load_file="src/openalea/phenomenal/version.py",
+  load_file="src/oawidgets/version.py",
   regex_pattern='MAJOR = (.+)') %}
 {% set minor = load_file_regex(
-  load_file="src/openalea/phenomenal/version.py",
+  load_file="src/oawidgets/version.py",
   regex_pattern='MINOR = (.+)') %}
 {% set post = load_file_regex(
-  load_file="src/openalea/phenomenal/version.py",
+  load_file="src/oawidgets/version.py",
   regex_pattern='POST = (.+)') %}
 
 {% set version = major[1]+'.'+minor[1]+'.'+post[1] %}
