--- a/doc/environment.yml
+++ b/doc/environment.yml
@@ -5,6 +5,7 @@ channels:
 dependencies:
   - python  >=3.6
   - openalea.mtg
+  - openalea.deploy
   - openalea.hydroshoot
   - openalea.lpy
   - k3d
